atualizando docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,9 @@ version: '3.8'
 
 services:
   genius-erp-crm:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: genius-erp-crm-app
-    restart: unless-stopped
+    build: .
     ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      # Add any other necessary environment variables here
-      # For example:
-      # - NEXT_PUBLIC_JWT_SECRET=your-production-secret
-      # - GOOGLE_GENAI_API_KEY=your-google-api-key
-    networks:
-      - app-network
+      - "2222:2222"
+    restart: always
 
-networks:
-  app-network:
-    driver: bridge
+
